Fixed the navigation z-index issue

--- a/components/ui/NavDropdown.module.css
+++ b/components/ui/NavDropdown.module.css
@@ -17,6 +17,7 @@
   align-items: flex-start;
   background-color: var(--white);
   position: relative;
+  z-index: 2;
 }
 
 
